2010-08-18  Ryan Nunn <colourles@users.sourceforge.net>
	* imagewin/imagewin.* : Attempting to work around problems experienced by 
	  Dominik. Checks for Windowed surface format support is now done at 
	  startup. Changed things so if SDL_VideoModeOK() checks fail, Exult still
	  still attempts to create the surface anyway. Disabled colour swapped 555 
	  and 565 optimized scalers.

2010-08-17  Ryan Nunn <colourles@users.sourceforge.net>
	* exult.cc, imagewin/* : Cleaning up scaler handling code, fixing bugs,
	  generally making things more flexible for future changes.
	* shapes/baseinf.h : Fixing a compiler warning

2010-08-17 Dominik Reichardt <dominus@users.sourceforge.net>
	* imagewin/imagewin.cc : commented out the SDL_VideoModeOK check before 
	  switching to fullscreen. This hopefully allows everyone to toggle 
	  fullscreen again. Please let us know.
	
2010-08-15 Dominik Reichardt <dominus@users.sourceforge.net>
	* Updated Documentation and FAQ
	
2010-08-13  Ryan Nunn <colourles@users.sourceforge.net>
	* audio/RawAudioSample.cc : Fixing crashes on PPC Macs

2010-07-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc, exult.cc, keys.cc: fixed bug #3011719  avatar can do stuff
	  while passed out. The player will be unable to do almost anything (similar
	  to the originals) if the avatar is asleep, unconscious, paralyzed or dead.
	  As a rule, cheat and mapedit actions are still allowed in these cases, and
	  hackmove allows dragging even in these conditions. Also, purely interface
	  actions will also work -- like esc, scrolling the map with the mouse wheel
	  and so on.
	* configure.ac: AC_PATH_XTRA is actually causing linking problems in Ubuntu
	  Karmic, so it has been removed (again).
	* Others: Eliminated a few warnings.

2010-07-26	Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac: Don't expand AC_PATH_XTRA in a conditional. This broke
      configure on all platforms other than linux.
